--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -4,7 +4,7 @@
 \setlength{\parskip}{1em}
 \setlength{\parindent}{0pt}
 
-\title{Programmazione ad oggetti}
+\title{Progetto tecweb}
 \author{Alessio, Alessandro, Elia, Marco}
 \date{September 2021}
 
