Aggiunte informazioni utili relative alla progettazione

--- a/src_latex/content/intro.tex
+++ b/src_latex/content/intro.tex
@@ -1,1 +1,3 @@
 \chapter{Introduzione}
+
+L'ambiente che prendiamo in considerazione è un sitoweb di recensioni di porticcioli turistici dell'isola d'elba. che per brevità chiameremo marina.
