--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -6,7 +6,7 @@
 
 \title{Progetto tecweb}
 \author{Alessio, Alessandro, Elia, Marco}
-\date{September 2021}
+\date{Novembre 2021}
 
 
 \begin{document}
@@ -17,5 +17,6 @@
 
 \include{content/intro.tex}
 \include{content/timeline.tex}
+\include{content/progettazione.tex}
     
 \end{document}
