Levate le cose inutili e iniziato a scrivere la descrizione testuale

--- a/src_latex/content/progettazione.tex
+++ b/src_latex/content/progettazione.tex
@@ -1,4 +1,4 @@
-\chapter{Progettazione}
+\section{Progettazione}
 \section{L'ambiente considerato}
 
 Abbiamo preso in considerazione il fatto che gli utenti sono persone che navigano, quindi hanno età che vanno dai 30 ai 70 anni, in generale sono amanti dell' avventura e non si perdono in un bicchier d'acqua.
