--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -1,11 +1,11 @@
-\documentclass[a4paper, 11pt]{report}
+\documentclass[a4paper, 11pt]{article}
 \usepackage{hyperref}
 
 \setlength{\parskip}{1em}
 \setlength{\parindent}{0pt}
 
 \title{Progetto tecweb}
-\author{Alessio, Alessandro, Elia, Marco}
+\author{Alessio, Alessandro, Elia}
 \date{Novembre 2021}
 
 
@@ -13,10 +13,6 @@
 
 \maketitle
 
-\tableofcontents
-
-\include{content/intro.tex}
-\include{content/timeline.tex}
-\include{content/progettazione.tex}
+\input{content/analisi}
     
 \end{document}
