--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -1,10 +1,21 @@
 \documentclass[a4paper, 11pt]{article}
 \usepackage{hyperref}
+\usepackage{geometry}
+ \geometry{
+ a4paper,
+ left=25mm,
+ right=25mm,
+ top=20mm,
+ bottom=20mm,
+ }
 
 \setlength{\parskip}{1em}
 \setlength{\parindent}{0pt}
 
 \title{Progetto tecweb}
+
+%Plausibile titolo: UniHelp?
+
 \author{Alessio, Alessandro, Elia}
 \date{Novembre 2021}
 
