--- a/src_latex/content/analisi.tex
+++ b/src_latex/content/analisi.tex
@@ -1,32 +1,33 @@
 \section{Analisi}
 \subsection{Descrizione testuale}
 
-Ci si propone di realizzare un sito web che consenta agli studenti dell'università di Padova all'interno del corso di laurea in informatica di trovare le informazioni relative agli studi e alle questioni afferenti in maniera ordinata e accessibile.
+Ci si propone di realizzare un sito web che consenta agli studenti dell'università di Padova all'interno del corso di Laurea in Informatica di trovare le informazioni relative agli studi e alle questioni afferenti in maniera ordinata e accessibile.
 
 Si vuole infatti aiutare gli studenti a trovare quello che cercano in maniera più efficiente rispetto alle modalità attualmente fornite dall'ateneo. Con particolare attenzione all'esperienza mobile.
 
 Gli argomenti principali che di cui gli studenti sembrano aver più bisogno dalle esperienze tratte dai gruppi universitari sono:
 \begin{itemize}
-    \item Informazioni e consigli sull'affrontare i corsi e sui corsi %Ad esempio inizio e fine lezioni, Consigli di studio
-    \item Inofmazioni riguardanti le aule studio ed il loro utilizzo
+    \item Informazioni e consigli sui corsi e come affrontarli %Ad esempio inizio e fine lezioni, Consigli di studio
+    \item Informazioni riguardanti le aule studio e istruzioni per l'accesso
     \item Utilizzo dei laboratori
     \item Utilizzo delle reti wifi
-    \item Stage
-    \item Tesi
+    \item Partecipazione allo stage
+    \item Passaggi per la consegna della tesi
     \item Come immatricolarsi %dove trovare i luoghi per i TOLC
-    \item A cosa serve il badge ed i documenti da avere sempre a portata e in quali luoghi servono% GP QR mensa Badge, Badge fisico
-    \item Altre cose misc
+    \item Documenti utili da avere a portata di mano e funzionalità del badge universitario % GP QR mensa Badge, Badge fisico
     \item Erasmus
+    \item Altre cose misc
 \end{itemize}
 
 \subsection{Analisi del target di utenza}
 
-Come dicevamo il gli utenti a cui ci rivolgiamo sono gli utenti del CDL Informatica. Per via della vicinanza fisica agli utenti dei Dipartimenti di Matematica, fisica e ignegnieria anche questi utenti potrebbero voler accedere ad alcune delle informazioni contenute nel sito.
+Come dicevamo gli utenti a cui ci rivolgiamo sono principalmente gli studenti del CDL Informatica. Per via della vicinanza fisica ai Dipartimenti di Matematica, Fisica e Ingegneria anche i loro studenti potrebbero voler accedere ad alcune delle informazioni contenute nel sito.
 
 \subsubsection{Studenti di Informatica}
 
 Gli studenti di informatica hanno alcune chiare pecularità, hanno ben chiara l'utilità degli aggiornamenti ed in generale sono sempre molto curiosi di provare nuove funzionalità offerte dai software. Da questo possiamo dedurre che il browser sarà sempre aggiornato all'ultima versione o quasi.
 
+% Target principale
 Questi utenti sono interessati alla totalità del contenuto del sito.
 
 %Da scrivere meglio
@@ -38,17 +39,17 @@ La loro primaria necessità è quella di effettuare ricerche in maniera veloce,
 
 secondariamente, tenderanno a interagire gli uni con gli altri, magari discutendo sugli argomenti cercati.
 
-%Relativamente all'analogia della pesca questi utenti sono: -una trappola per granchi, pesca precisa e una boa di segnalazione
+%Relativamente all'analogia della pesca questi utenti sono: -una trappola per aragoste, pesca precisa e una boa di segnalazione
 
 \subsubsection{Persone interessate ad immatricolarsi ad Informatica}
 Sono persone curiose che hanno tendenzialmente abbastenza tempo dato che stanno prendendo una decisione importante e possono permettersi di sedersi davanti ad un computer e leggere con attenzione le caratteristiche di cosa si andrà a fare.
 
-%Relativamente all'analogia della pesca questi utenti sono : - pesca a strascico, trappola per granchi e boa di segnalazione.
+%Relativamente all'analogia della pesca questi utenti sono : - pesca a strascico, trappola per aragoste e boa di segnalazione.
 
 \subsubsection{Studenti di altri corsi di laurea}
 Questi utenti possiamo paragonarli in molti aspetti agli studenti di informatica, sono molto aggiornati, non sempre come quelli di informatica ma utilizzano comunque le ultime tecnologie. Fanno molto un utilizzo dei contenuti in mobilità poichè il macro-ambiente è lo stesso degli studenti di informatica.
 
-%Relaticamente all'analogia della pesca sono: -una trappola per granchi e una boa di segnalazione.
+%Relaticamente all'analogia della pesca sono: -una trappola per aragoste e una boa di segnalazione.
 
-
-
+\subsubsection{Conclusioni}
+Da questo si può evincere che l'utenza target di questo sito ha browser aggiornati in grado di supportare gli utlimi update degli standard HTML5 e CSS3, quindi risulterebbe poco sensato imporsi limitiazioni sull'utilizzo di nuove feauture offerte dagli standard.
