--- a/src_latex/content/analisi.tex
+++ b/src_latex/content/analisi.tex
@@ -51,5 +51,17 @@ Questi utenti possiamo paragonarli in molti aspetti agli studenti di informatica
 
 %Relaticamente all'analogia della pesca sono: -una trappola per aragoste e una boa di segnalazione.
 
-\subsubsection{Conclusioni}
+\subsection{Conclusioni}
+
 Da questo si può evincere che l'utenza target di questo sito ha browser aggiornati in grado di supportare gli utlimi update degli standard HTML5 e CSS3, quindi risulterebbe poco sensato imporsi limitiazioni sull'utilizzo di nuove feauture offerte dagli standard.
+
+\subsubsection{Ricerca}
+L'utente deve poter effettuare la ricerca delle informazioni a cui è interessato all'interno di tutto il sito.
+\subsubsection{Login}
+L'utente può iscriversi in modo da salvare le sue preferenze. Ad esempio a quale corso è iscritto.
+\subsubsection{Dashboard utente}
+Dalla dashboard l'utente registrato può selezionare le informazioni alle quali accede più frequentemente.
+\subsubsection{Sezione pre immatricolati}
+Un utente che non fa ancora parte dell'università può visualizzare alcune informazioni utili.
+\subsubsection{Stampa microguide}
+Un utente può salvarsi tramite stampa alcune pagine in modo da poterle utilizzare offline. 
