--- a/src_latex/content/progettazione.tex
+++ b/src_latex/content/progettazione.tex
@@ -1,6 +1,7 @@
 \section{Progettazione}
-\section{L'ambiente considerato}
+Come strategia di progettazione abbiamo usato quella di \textit{Mobile First} e \textit{Responsive Web Design}.\\
+L'approccio \texit{Mobile First} ci permette di concentrarci su quello che è il nostro target che effettua l'accesso al sito principalmente da dispositivi mobili.\\
+Invece l'approccio \textit{Responsive Web Design} si basa sul concetto di \textit{media query}, strumenti che ottimizzano la visualizzazione su dispositivi specifici e dimensioni di vieport.\\
+Dall'analisi dell'utenza possiamo assumere che il sito verrà visitato da browser aggiornati e che quindi supportano le ultime feature degli standard HTML5 e CSS3.\\
 
-Abbiamo preso in considerazione il fatto che gli utenti sono persone che navigano, quindi hanno età che vanno dai 30 ai 70 anni, in generale sono amanti dell' avventura e non si perdono in un bicchier d'acqua.
-
-Tra i costraint più importanti possiamo notare che non tutte le persone che avranno bisogno del sito sono di nazionalità italiana, questo pone due problemi importanti, ovvero che il sito dovrà presentare almeno una sezione inglese e che in secondo luogo dovrà prestare attenzione al fatto che non tutti quindi avranno una connessione stabile alla rete internet italiana, molti dovranno fare accesso al sito tramite roaming. Sarà quindi importante prestare attenzione alla leggerezza del sito per fare in mmodo che chi lo utilizza sorechi meno traffico dati possibile per poter fare quello che ha bisogno di fare.
+\subsection{Layout}
