--- a/src_latex/content/analisi.tex
+++ b/src_latex/content/analisi.tex
@@ -1,22 +1,26 @@
 \section{Analisi}
 \subsection{Descrizione testuale}
 
-Ci si propone di realizzare un sito web che consenta agli studenti dell'università di Padova all'interno del corso di Laurea in Informatica di trovare le informazioni relative agli studi e alle questioni afferenti in maniera ordinata e accessibile.
+Ci si propone di realizzare un sito web che consensta agli studenti dell'Università di Padova iscritti al Dipartimento di Matematica di accedere ad informazioni relative alla propria carriera di studi.\\
+Inoltre si vuole mettere a disposizione un punto dove recuperare informazioni velocemente per gestire la vita al di fuori delle lezioni come ad 
+esempio indicazioni per aule studio e punti ristoro.\\
+Questo sito punta a centralizzare le informazioni che si posso recuperare, spesso con fatica, dai vari siti di ateneo e dei dipartimenti.\\
+Proprio per questo particolare attenzione viene posta sull'esperienza da dispotivo mobile, dato che gli studenti sono molto spesso in movimento e sfruttano lo smartphone per risolvere velocemente dei dubbi.
 
-Si vuole infatti aiutare gli studenti a trovare quello che cercano in maniera più efficiente rispetto alle modalità attualmente fornite dall'ateneo. Con particolare attenzione all'esperienza mobile.
-
-Gli argomenti principali che di cui gli studenti sembrano aver più bisogno dalle esperienze tratte dai gruppi universitari sono:
+Gli argomenti che di cui gli studenti hanno più dubbi, stando a quanto si nota dai vari gruppi universitari, sono:
 \begin{itemize}
-    \item Informazioni e consigli sui corsi e come affrontarli %Ad esempio inizio e fine lezioni, Consigli di studio
-    \item Informazioni riguardanti le aule studio e istruzioni per l'accesso
-    \item Utilizzo dei laboratori
-    \item Utilizzo delle reti wifi
-    \item Partecipazione allo stage
-    \item Passaggi per la consegna della tesi
-    \item Come immatricolarsi %dove trovare i luoghi per i TOLC
-    \item Documenti utili da avere a portata di mano e funzionalità del badge universitario % GP QR mensa Badge, Badge fisico
-    \item Erasmus
-    \item Altre cose misc
+    \item Informazioni e consigli sui vari corsi e come affrontarli al meglio. Questi possono essere semplici dubbi riguardanti gli orari delle lezioni, quali mail utilizzare per contattare il docente.
+    %Ad esempio inizio e fine lezioni, Consigli di studio
+    \item Informazioni riguardanti edifici e aule. Oltre al cercare i vari indirizzi di aule di lezione e aule studio, spesso si vuole sapere se sono anche fornite di connessione e, ad esempio, prese di corrente. Anche le informazioni per l'accesso sono molto richieste, ad esempio se è necessaria una prenotazione o meno. 
+    \item Utilizzo dei laboratori. Ogni dipartimento ha i suoi laboratori e l'accesso ad essi, sia esso fisico ma anche a livello di account, causa spesso dubbi agli studenti.
+    \item Utilizzo delle reti wifi. La necessità di una rete buona e stabile è molto sentita da ogni studente, per cui è utile avere una guida su come connettersi alle varie offerte dall'ateneo.   
+    \item Partecipazione allo stage e consegna della tesi. Sono gli ultimi passi nella carriera universitaria ed è difficile completarli a causa di vari dettagli burocratici sparsi per i vari siti di dipartimento. Una raccolta chiara e semplice di queste informazioni può aiutare tutti gli studenti interessati.
+    %\item Come immatricolarsi %dove trovare i luoghi per i TOLC
+    % Li vogliamo sul serio i non immatricolati?
+    \item Quali sono i documenti e gli strumenti utili da avere sempre a portata di mano: il badge universitario, il QR per la mensa e le varie applicazioni UniPD.
+    % GP QR mensa Badge, Badge fisico
+    \item Tutta la documentazione e i link utili per il progetto Erasmus
+    % \item Altre cose misc
 \end{itemize}
 
 \subsection{Analisi del target di utenza}
