--- a/src_latex/content/analisi.tex
+++ b/src_latex/content/analisi.tex
@@ -25,47 +25,38 @@ Gli argomenti che di cui gli studenti hanno più dubbi, stando a quanto si nota 
 
 \subsection{Analisi del target di utenza}
 
-Come dicevamo gli utenti a cui ci rivolgiamo sono principalmente gli studenti del CDL Informatica. Per via della vicinanza fisica ai Dipartimenti di Matematica, Fisica e Ingegneria anche i loro studenti potrebbero voler accedere ad alcune delle informazioni contenute nel sito.
+L'utenza sarà principalmente formata da studenti del CdL in Informatica. Data la vicinanza geografica con i dipartimenti di Matematica, Fisica e Ingegneria nulla vieta anche ai loro studenti di accedere al nostro sito per ottenere alcune informazioni utili.
+
+Dall'analisi appena fatta quindi possiamo aspettarci degli utenti consapevoli nell'utilizzo dei loro strumenti, con aggiornamenti frequenti e attuali, curiosi nel provare nuove funzionalità offerte dai software. Per questo il nostro sito potrà utilizzare senza troppi rischi nuovi standard.
 
 \subsubsection{Studenti di Informatica}
+Questa categoria di utenza è il target principale a cui ci rivolgiamo. Sono interessati alla totalità dei contenuti del sito. 
+% Mobile: pesca precisa
+% Desktop: trappola per aragoste
+Le informazioni saranno fruite prevalentemente tramite mobile, ad esempio per ricerche di aule studio o accessi ad edifici specifici (vedi mensa, laboratori). Le ricerche più approfondite saranno spesso svolte da desktop. 
+Questo tipo di utenti sono abituati ad un utilizzo agile e veloce di internet. Inoltre la maggior parte di loro sà destreggiarsi sul web senza problemi, effettuando ricerche precise ma osservando tutte le informazioni al contorno. 
+% secondariamente, tenderanno a interagire gli uni con gli altri, magari discutendo sugli argomenti cercati. ( una boa di segnalazione?)
+% Cosa significa "tenderanno ad interagire"?  
 
-Gli studenti di informatica hanno alcune chiare pecularità, hanno ben chiara l'utilità degli aggiornamenti ed in generale sono sempre molto curiosi di provare nuove funzionalità offerte dai software. Da questo possiamo dedurre che il browser sarà sempre aggiornato all'ultima versione o quasi.
-
-% Target principale
-Questi utenti sono interessati alla totalità del contenuto del sito.
-
-%Da scrivere meglio
-Probabilmente usufruiranno dei contenuti da mobile perché ad esempio avranno bisogno dei contenuti poco prima di dover accedere in mensa o nelle aule studio.
-
-Inoltre gli studenti sono abituati ad un utilizzo di internet agile e veloce:
-
-La loro primaria necessità è quella di effettuare ricerche in maniera veloce, 
-
-secondariamente, tenderanno a interagire gli uni con gli altri, magari discutendo sugli argomenti cercati.
-
-%Relativamente all'analogia della pesca questi utenti sono: -una trappola per aragoste, pesca precisa e una boa di segnalazione
-
+% Da decidere se interessarsi a questi o no
 \subsubsection{Persone interessate ad immatricolarsi ad Informatica}
-Sono persone curiose che hanno tendenzialmente abbastenza tempo dato che stanno prendendo una decisione importante e possono permettersi di sedersi davanti ad un computer e leggere con attenzione le caratteristiche di cosa si andrà a fare.
-
+Principalmente ragazzi che stanno terminando il percorso della scuola secondaria. Hanno tutto il tempo necessario a svolgere una ricerca approfondita dato che stanno valutando una decisione importante, cercando ogni dettaglio gli permetta di scegliere al meglio il Corso più adatto a loro. Essendo alla ricerca di un percorso in questo campo molto probabilmente avranno strumenti aggiornati.
 %Relativamente all'analogia della pesca questi utenti sono : - pesca a strascico, trappola per aragoste e boa di segnalazione.
 
 \subsubsection{Studenti di altri corsi di laurea}
-Questi utenti possiamo paragonarli in molti aspetti agli studenti di informatica, sono molto aggiornati, non sempre come quelli di informatica ma utilizzano comunque le ultime tecnologie. Fanno molto un utilizzo dei contenuti in mobilità poichè il macro-ambiente è lo stesso degli studenti di informatica.
-
+Gli studenti che usufruiranno principalmente di questo sito appartengono a corsi dell'area scientifica. Possiamo quindi assumere che, anche se non al livello degli studenti di Informatica, i loro dispositivi saranno abbastanza aggiornati da gestire le ultime tecnologie. L'essere spesso in movimento mentre si cercano informazioni, quindi accedervi da mobile, vale anche per loro, essendo questa una caratteristica comune a tutti gli studenti. La differenza principale è che non possiamo aspettarci la stessa sicurezza e precisione nelle ricerche, ma un livello comunque buono.
 %Relaticamente all'analogia della pesca sono: -una trappola per aragoste e una boa di segnalazione.
+% Continuo a non capire sta cosa della boa
 
 \subsection{Conclusioni}
+% Non sono dettagli tecnici questi? Quindi da spostare in altre parti?
+Da questo si può evincere che l'utenza target di questo sito ha browser aggiornati in grado di supportare gli utlimi update degli standard HTML5 e CSS3, quindi risulterebbe poco sensato imporsi limitiazioni sull'utilizzo delle nuove feauture offerte.
 
-Da questo si può evincere che l'utenza target di questo sito ha browser aggiornati in grado di supportare gli utlimi update degli standard HTML5 e CSS3, quindi risulterebbe poco sensato imporsi limitiazioni sull'utilizzo di nuove feauture offerte dagli standard.
-
-\subsubsection{Ricerca}
-L'utente deve poter effettuare la ricerca delle informazioni a cui è interessato all'interno di tutto il sito.
-\subsubsection{Login}
-L'utente può iscriversi in modo da salvare le sue preferenze. Ad esempio a quale corso è iscritto.
-\subsubsection{Dashboard utente}
-Dalla dashboard l'utente registrato può selezionare le informazioni alle quali accede più frequentemente.
-\subsubsection{Sezione pre immatricolati}
-Un utente che non fa ancora parte dell'università può visualizzare alcune informazioni utili.
-\subsubsection{Stampa microguide}
-Un utente può salvarsi tramite stampa alcune pagine in modo da poterle utilizzare offline. 
+\subsection{Servizi offerti}
+\begin{itemize}
+    \item \textbf{Ricerca} \\ L'utente deve poter effettuare la ricerca delle informazioni a cui è interessato all'interno di tutto il sito.
+    \item \textbf{Login} \\ L'utente può iscriversi in modo da salvare le sue preferenze. Ad esempio quali corsi sta seguendo.
+    \item \textbf{Dashboard utente} \\ Dalla dashboard l'utente registrato può selezionare le informazioni alle quali accede più frequentemente.
+    \item \textbf{Sezione pre immatricolati} \\ Un utente che non fa ancora parte dell'università può visualizzare alcune informazioni utili. % No
+    \item \textbf{Stampa microguide} \\ Un utente può salvarsi tramite stampa alcune pagine in modo da poterle visualizzare offline.
+\end{itemize}
