--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -12,7 +12,7 @@
 \setlength{\parskip}{1em}
 \setlength{\parindent}{0pt}
 
-\title{Progetto tecweb}
+\title{Progetto TecWeb \\ UniHelp}
 
 %Plausibile titolo: UniHelp?
 
