--- a/src_latex/content/intro.tex
+++ b/src_latex/content/intro.tex
@@ -1,3 +1,5 @@
 \section{Introduzione}
 
 L'ambiente che prendiamo in considerazione è un sitoweb di recensioni di porticcioli turistici dell'isola d'elba. che per brevità chiameremo marina.
+
+L'ambiete che prendiamo in considerazione è un sito web per la ricerca e la condivisione di informazioni tra studenti dell'Università di Padova che studiano nella zona Portello. Rivolto principalmente al CdL in Informatica, alcune informazioni presenti sono utili anche ai vicini studenti di Matematica, Fisica e Ingegneria.
