--- a/src_latex/content/progettazione.tex
+++ b/src_latex/content/progettazione.tex
@@ -1,7 +1,8 @@
 \section{Progettazione}
-Come strategia di progettazione abbiamo usato quella di \textit{Mobile First} e \textit{Responsive Web Design}.\\
-L'approccio \texit{Mobile First} ci permette di concentrarci su quello che è il nostro target che effettua l'accesso al sito principalmente da dispositivi mobili.\\
-Invece l'approccio \textit{Responsive Web Design} si basa sul concetto di \textit{media query}, strumenti che ottimizzano la visualizzazione su dispositivi specifici e dimensioni di vieport.\\
+
+Per la progettazione abbiamo usato una strategia \textit{Mobile First} e \textit{Responsive Web Design}.\\
+L'approccio \textit{Mobile First} ci permette di concentrarci sulla modalità principale di accesso del nostro target di utenza, ovvero quella da mobile in movimento. Questo comporta una struttura dell'informazione chiara e di semplice fruizione.\\
+Invece l'approccio \textit{Responsive Web Design} si basa sul concetto di \textit{media query}, strumenti che ottimizzano la visualizzazione per specifiche dimensioni di dispositivi e vieport.\\
 Dall'analisi dell'utenza possiamo assumere che il sito verrà visitato da browser aggiornati e che quindi supportano le ultime feature degli standard HTML5 e CSS3.\\
 
 \subsection{Layout}
