--- a/src_latex/content/analisi.tex
+++ b/src_latex/content/analisi.tex
@@ -2,19 +2,17 @@
 \subsection{Descrizione testuale}
 
 Ci si propone di realizzare un sito web che consensta agli studenti dell'Università di Padova iscritti al Dipartimento di Matematica di accedere ad informazioni relative alla propria carriera di studi.\\
-Inoltre si vuole mettere a disposizione un punto dove recuperare informazioni velocemente per gestire la vita al di fuori delle lezioni come ad 
-esempio indicazioni per aule studio e punti ristoro.\\
+Inoltre si vuole mettere a disposizione un punto dove recuperareinformazioni velocemente per gestire la vita al di fuori delle lezioni come ad esempio indicazioni per aule studio e punti ristoro.\\
 Questo sito punta a centralizzare le informazioni che si posso recuperare, spesso con fatica, dai vari siti di ateneo e dei dipartimenti.\\
-Proprio per questo particolare attenzione viene posta sull'esperienza da dispotivo mobile, dato che gli studenti sono molto spesso in movimento e sfruttano lo smartphone per risolvere velocemente dei dubbi.
-
+Proprio per questo particolare attenzione viene posta sull'esperienza da dispotivo mobile, dato che gli studenti sono molto spesso in movimento e sfruttano lo smartphone per risolvere velocemente dei dubbi.\\
 Gli argomenti che di cui gli studenti hanno più dubbi, stando a quanto si nota dai vari gruppi universitari, sono:
 \begin{itemize}
-    \item Informazioni e consigli sui vari corsi e come affrontarli al meglio. Questi possono essere semplici dubbi riguardanti gli orari delle lezioni, quali mail utilizzare per contattare il docente.
+    \item Informazioni e consigli sui vari corsi e come affrontarli al meglio. \\ Questi possono essere semplici dubbi riguardanti gli orari delle lezioni, quali mail utilizzare per contattare il docente.
     %Ad esempio inizio e fine lezioni, Consigli di studio
-    \item Informazioni riguardanti edifici e aule. Oltre al cercare i vari indirizzi di aule di lezione e aule studio, spesso si vuole sapere se sono anche fornite di connessione e, ad esempio, prese di corrente. Anche le informazioni per l'accesso sono molto richieste, ad esempio se è necessaria una prenotazione o meno. 
-    \item Utilizzo dei laboratori. Ogni dipartimento ha i suoi laboratori e l'accesso ad essi, sia esso fisico ma anche a livello di account, causa spesso dubbi agli studenti.
-    \item Utilizzo delle reti wifi. La necessità di una rete buona e stabile è molto sentita da ogni studente, per cui è utile avere una guida su come connettersi alle varie offerte dall'ateneo.   
-    \item Partecipazione allo stage e consegna della tesi. Sono gli ultimi passi nella carriera universitaria ed è difficile completarli a causa di vari dettagli burocratici sparsi per i vari siti di dipartimento. Una raccolta chiara e semplice di queste informazioni può aiutare tutti gli studenti interessati.
+    \item Informazioni riguardanti edifici e aule.\\ Oltre al cercare i vari indirizzi di aule di lezione e aule studio, spesso si vuole sapere se sono anche fornite di connessione e, ad esempio, prese di corrente. Anche le informazioni per l'accesso sono molto richieste, ad esempio se è necessaria una prenotazione o meno. 
+    \item Utilizzo dei laboratori. \\ Ogni dipartimento ha i suoi laboratori e l'accesso ad essi, sia esso fisico ma anche a livello di account, causa spesso dubbi agli studenti.
+    \item Utilizzo delle reti wifi. \\ La necessità di una rete buona e stabile è molto sentita da ogni studente, per cui è utile avere una guida su come connettersi alle varie offerte dall'ateneo.   
+    \item Partecipazione allo stage e consegna della tesi. \\ Sono gli ultimi passi nella carriera universitaria ed è difficile completarli a causa di vari dettagli burocratici sparsi per i vari siti di dipartimento. Una raccolta chiara e semplice di queste informazioni può aiutare tutti gli studenti interessati.
     %\item Come immatricolarsi %dove trovare i luoghi per i TOLC
     % Li vogliamo sul serio i non immatricolati?
     \item Quali sono i documenti e gli strumenti utili da avere sempre a portata di mano: il badge universitario, il QR per la mensa e le varie applicazioni UniPD.
@@ -25,26 +23,27 @@ Gli argomenti che di cui gli studenti hanno più dubbi, stando a quanto si nota 
 
 \subsection{Analisi del target di utenza}
 
-L'utenza sarà principalmente formata da studenti del CdL in Informatica. Data la vicinanza geografica con i dipartimenti di Matematica, Fisica e Ingegneria nulla vieta anche ai loro studenti di accedere al nostro sito per ottenere alcune informazioni utili.
-
+L'utenza sarà principalmente formata da studenti del CdL in Informatica. Data la vicinanza geografica con i dipartimenti di Matematica, Fisica e Ingegneria nulla vieta anche ai loro studenti di accedere al nostro sito per ottenere alcune informazioni utili.\\
 Dall'analisi appena fatta quindi possiamo aspettarci degli utenti consapevoli nell'utilizzo dei loro strumenti, con aggiornamenti frequenti e attuali, curiosi nel provare nuove funzionalità offerte dai software. Per questo il nostro sito potrà utilizzare senza troppi rischi nuovi standard.
 
 \subsubsection{Studenti di Informatica}
-Questa categoria di utenza è il target principale a cui ci rivolgiamo. Sono interessati alla totalità dei contenuti del sito. 
+Questa categoria di utenza è il target principale a cui ci rivolgiamo. Sono interessati alla totalità dei contenuti del sito. \\
 % Mobile: pesca precisa
 % Desktop: trappola per aragoste
-Le informazioni saranno fruite prevalentemente tramite mobile, ad esempio per ricerche di aule studio o accessi ad edifici specifici (vedi mensa, laboratori). Le ricerche più approfondite saranno spesso svolte da desktop. 
-Questo tipo di utenti sono abituati ad un utilizzo agile e veloce di internet. Inoltre la maggior parte di loro sà destreggiarsi sul web senza problemi, effettuando ricerche precise ma osservando tutte le informazioni al contorno. 
+Le informazioni saranno fruite prevalentemente tramite mobile, ad esempio per ricerche di aule studio o accessi ad edifici specifici (vedi mensa, laboratori). Le ricerche più approfondite saranno spesso svolte da desktop.\\
+Questo tipo di utenti sono abituati ad un utilizzo agile e veloce di internet. Inoltre la maggior parte di loro sà destreggiarsi sul web senza problemi, effettuando ricerche precise ma osservando tutte le informazioni al contorno.
 % secondariamente, tenderanno a interagire gli uni con gli altri, magari discutendo sugli argomenti cercati. ( una boa di segnalazione?)
 % Cosa significa "tenderanno ad interagire"?  
 
 % Da decidere se interessarsi a questi o no
 \subsubsection{Persone interessate ad immatricolarsi ad Informatica}
-Principalmente ragazzi che stanno terminando il percorso della scuola secondaria. Hanno tutto il tempo necessario a svolgere una ricerca approfondita dato che stanno valutando una decisione importante, cercando ogni dettaglio gli permetta di scegliere al meglio il Corso più adatto a loro. Essendo alla ricerca di un percorso in questo campo molto probabilmente avranno strumenti aggiornati.
+Principalmente ragazzi che stanno terminando il percorso della scuola secondaria. Hanno tutto il tempo necessario a svolgere una ricerca approfondita dato che stanno valutando una decisione importante, cercando ogni dettaglio gli permetta di scegliere al meglio il Corso più adatto a loro.\\
+Essendo alla ricerca di un percorso in questo campo molto probabilmente avranno strumenti aggiornati.
 %Relativamente all'analogia della pesca questi utenti sono : - pesca a strascico, trappola per aragoste e boa di segnalazione.
 
 \subsubsection{Studenti di altri corsi di laurea}
-Gli studenti che usufruiranno principalmente di questo sito appartengono a corsi dell'area scientifica. Possiamo quindi assumere che, anche se non al livello degli studenti di Informatica, i loro dispositivi saranno abbastanza aggiornati da gestire le ultime tecnologie. L'essere spesso in movimento mentre si cercano informazioni, quindi accedervi da mobile, vale anche per loro, essendo questa una caratteristica comune a tutti gli studenti. La differenza principale è che non possiamo aspettarci la stessa sicurezza e precisione nelle ricerche, ma un livello comunque buono.
+Gli studenti che usufruiranno principalmente di questo sito appartengono a corsi dell'area scientifica. Possiamo quindi assumere che, anche se non al livello degli studenti di Informatica, i loro dispositivi saranno abbastanza aggiornati da gestire le ultime tecnologie.\\
+L'essere spesso in movimento mentre si cercano informazioni, quindi accedervi da mobile, vale anche per loro, essendo questa una caratteristica comune a tutti gli studenti. La differenza principale è che non possiamo aspettarci la stessa sicurezza e precisione nelle ricerche dei precedenti, ma un livello comunque buono.
 %Relaticamente all'analogia della pesca sono: -una trappola per aragoste e una boa di segnalazione.
 % Continuo a non capire sta cosa della boa
 
