--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -23,7 +23,9 @@
 \begin{document}
 
 \maketitle
-
+\input{content/intro}
 \input{content/analisi}
-    
+\input{content/progettazione}
+\input{content/timeline}
+
 \end{document}
