Aggiunte nuove cose, si ringrazia @elia e @alessio

--- a/src_latex/content/analisi.tex
+++ b/src_latex/content/analisi.tex
@@ -1,44 +1,32 @@
 \section{Analisi}
 \subsection{Descrizione testuale}
 
-Ci si propone di realizzare un sito web che consensta agli studenti dell'Università di Padova iscritti al Dipartimento di Matematica di accedere ad informazioni relative alla propria carriera di studi.\\
-Inoltre si vuole mettere a disposizione un punto dove recuperareinformazioni velocemente per gestire la vita al di fuori delle lezioni come ad esempio indicazioni per aule studio e punti ristoro.\\
+Ci si propone di realizzare un sito web che consensta agli studenti dell'Università di Padova iscritti al Corso di Laurea in informatica. di accedere ad informazioni relative alla propria permanenza nei locali dell'università di Padova e ai corsi.\\
+Inoltre si vuole mettere a disposizione un punto dove recuperare informazioni velocemente per gestire la vita al di fuori delle lezioni come ad esempio indicazioni per aule studio.\\
 Questo sito punta a centralizzare le informazioni che si posso recuperare, spesso con fatica, dai vari siti di ateneo e dei dipartimenti.\\
 Proprio per questo particolare attenzione viene posta sull'esperienza da dispotivo mobile, dato che gli studenti sono molto spesso in movimento e sfruttano lo smartphone per risolvere velocemente dei dubbi.\\
-Gli argomenti che di cui gli studenti hanno più dubbi, stando a quanto si nota dai vari gruppi universitari, sono:
+Gli argomenti di cui gli studenti hanno più dubbi, stando a quanto si nota dai vari gruppi universitari, sono:
 \begin{itemize}
-    \item Informazioni e consigli sui vari corsi e come affrontarli al meglio. \\ Ad esempio gli orari delle lezioni oppure le mail dei docenti e dei vari uffici.
-    \item Informazioni riguardanti edifici e aule.\\ Indirizzi, orari, informazioni sulla presenza di reti wifi e prese di corrente, senza dimenticare le modalità di accesso.
-    \item Utilizzo dei laboratori. \\ Istruzioni chiare e semplici su come ottenere, gestire e recuperare gli account di laboratorio e come utilizzare queste aule particolari.
+    \item Informazioni e consigli sui vari corsi e come affrontarli al meglio.
+    \item Informazioni riguardanti edifici e aule.\\ Indirizzi, informazioni sulla presenza di reti wifi e prese di corrente, senza dimenticare le modalità di accesso.
     \item Utilizzo delle reti wifi. \\ La necessità di una rete buona e stabile è molto sentita da ogni studente, per cui è utile avere una guida su come connettersi alle varie offerte dall'ateneo.   
     \item Partecipazione allo stage e consegna della tesi. \\ Sono gli ultimi passi della carriere universitaria e le istruzioni sono sparse e nascoste nei vari siti dell'ateneo. L'idea è di centralizzarle e renderle di facile comprensione.
     \item Quali sono i documenti e gli strumenti utili da avere sempre a portata di mano: il badge universitario, il QR per la mensa e le varie applicazioni UniPD.
-    \item Tutta la documentazione e i link utili per il progetto Erasmus
 \end{itemize}
 
 \subsection{Analisi del target di utenza}
 
-L'utenza sarà principalmente formata da studenti del CdL in Informatica. Data la vicinanza geografica con i dipartimenti di Matematica, Fisica e Ingegneria nulla vieta anche ai loro studenti di accedere al nostro sito per ottenere alcune informazioni utili.\\
+L'utenza sarà principalmente formata da studenti del CdL in Informatica. Data la vicinanza geografica con i dipartimenti di Matematica, Fisica e Ingegneria nulla vieta anche ai loro studenti di visitare il nostro sito per ottenere alcune informazioni utili.\\
 Dall'analisi appena fatta quindi possiamo aspettarci degli utenti consapevoli nell'utilizzo dei loro strumenti, con aggiornamenti frequenti e attuali, curiosi nel provare nuove funzionalità offerte dai software. Per questo il nostro sito potrà utilizzare senza troppi rischi nuovi standard.
 
-\subsubsection{Studenti di Informatica}
-Questa categoria di utenza è il target principale a cui ci rivolgiamo. Sono interessati alla totalità dei contenuti del sito. \\
-% Mobile: pesca precisa
-% Desktop: trappola per aragoste
-Le informazioni saranno fruite prevalentemente tramite mobile, ad esempio per ricerche di aule studio o accessi ad edifici specifici (vedi mensa, laboratori). Le ricerche più approfondite saranno spesso svolte da desktop.\\
-Questo tipo di utenti sono abituati ad un utilizzo agile e veloce di internet. Inoltre la maggior parte di loro sà destreggiarsi sul web senza problemi, effettuando ricerche precise ma osservando tutte le informazioni al contorno.
+Si vogliono soddisfare sia le persone che vogliono arrivare al "tiro perfetto", infatti abbiamo utilizzato un'organizzazione informativa a schema esatto, sia le persone che non sanno bene cosa cercano e vogliono informazioni generali sul corso di laurea "trappola per aragoste".
 
-\subsubsection{Studenti di altri corsi di laurea}
-Gli studenti che usufruiranno principalmente di questo sito appartengono a corsi dell'area scientifica. Possiamo quindi assumere che, anche se non al livello degli studenti di Informatica, i loro dispositivi saranno abbastanza aggiornati da gestire le ultime tecnologie.\\
-L'essere spesso in movimento mentre si cercano informazioni, quindi accedervi da mobile, vale anche per loro, essendo questa una caratteristica comune a tutti gli studenti. La differenza principale è che non possiamo aspettarci la stessa sicurezza e precisione nelle ricerche dei precedenti, ma un livello comunque buono.
-
-\subsection{Conclusioni}
-Da questo si può evincere che l'utenza target di questo sito ha browser aggiornati in grado di supportare gli utlimi update degli standard HTML5 e CSS3, quindi risulterebbe poco sensato imporsi limitiazioni sull'utilizzo delle nuove feauture offerte.
+Sappiamo inoltre che potremmo soddisfare anche chi fa "pesca a strascico" perché il sito non è di vaste dimensioni.
 
 \subsection{Servizi offerti}
 \begin{itemize}
-    \item \textbf{Ricerca} \\ L'utente deve poter effettuare la ricerca delle informazioni a cui è interessato all'interno di tutto il sito.
-    \item \textbf{Login} \\ L'utente può iscriversi in modo da salvare le sue preferenze. Ad esempio quali corsi sta seguendo.
-    \item \textbf{Dashboard utente} \\ Dalla dashboard l'utente registrato può selezionare le informazioni alle quali accede più frequentemente.
-    \item \textbf{Stampa microguide} \\ Un utente può salvarsi tramite stampa alcune pagine in modo da poterle visualizzare offline.
+    \item \textbf{Login} \\ L'utente può iscriversi per commentare aule studio e corsi per contribuire con le proprie conoscenze ad una conoscenza globale e distribuita;
+    \item \textbf{Recensioni} \\L'utente deve poter leggere e creare recensioni dei corsi erogati dall'Università di Padova e delle aule studio;
+    \item \textbf{Stampa microguide} \\ Un utente può salvarsi tramite stampa alcune pagine in modo da poterle visualizzare offline;
+    \item \textbf{Aule studio più vicine} \\ L'utente potrà trovare le aule studio più vicine a se tramite la geolocalizzazione.
 \end{itemize}
